Fixed a bug with SORT not updating DB rowObject.color, row-manipulator in dc.js being misaligned and added z-index for burger menu list panel to be on top

--- a/dailyChecking/css/dark.css
+++ b/dailyChecking/css/dark.css
@@ -289,6 +289,7 @@ body {
 		justify-content: space-around;
 		list-style: none;
 		position: absolute;
+		z-index: 1;
 		top: 58px;
 		left: -287px;
 		height: 150px;
@@ -557,7 +558,7 @@ form label {
 
 #row-manipulator {
 	width: 100%;
-	padding-left: 219px;
+	padding-left: 8px;
 	margin-top: 5px;
 	margin-bottom: 20px;
 }
